[package]
name = "hdkey-rs"
version = "0.1.0"
authors = ["@0xys"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[dependencies]
k256 = "0.7.3"
hmac-sha512 = "0.1.9"
num-bigint = "0.4.0"
generic-array = "0.14.4"
base58 = "0.1.0"
ripemd160 = "0.9.1"
sha2 = "0.9.5"
hex = "0.4.3"